platform/tekton/resources/tekton-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
  name: tekton-dashboard
spec:
  ingressClassName: nginx
  rules:
  - host: tekton.local.tecno-fly.com
    http:
      paths:
      - backend:
          service:
            name: tekton-dashboard
            port:
              number: 9097
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - tekton.local.tecno-fly.com
    secretName: tekton-tls
